[package]
name = "triehash-ethereum"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Trie-root helpers, ethereum style"
license = "GPL-3.0"

[dependencies]
trie-root = { git = "https://github.com/paritytech/trie" }
rlp = "0.3"
ethereum-types = "0.4"
keccak-hasher = { path = "../keccak-hasher" }
